# srvinv-cli

./: .gitignore  requirements.txt  setup.cfg  srvinv  srvsearch
libsrvinv/: __init__.py  bson_helper.py  config.example.py  config.py  helpers.py  srvinv.cfg
scripts/: inventory_this
