[metadata]
name = srvinv-cli
version = 0.9.5
author = Collins GmbH & Co. KG
author-email = info@project-collins.com
summary = Server inventory CLI
home-page = https://github.com/aboutyou/srvinv-cli
classifier =
    Environment :: Console
    Intended Audience :: Developres
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Topic :: Software Development :: Libraries


[files]
packages = libsrvinv

data_files =
  etc/collins = libsrvinv/srvinv.cfg


[entry_points]
console_scripts =
  srvinv = libsrvinv.bin.srvinv:run
  srvsearch = libsrvinv.bin.srvsearch:run
